<resources>
    <string name="app_name">White Cross</string>

    <!--Title-->
    <string name="title_start">Start Page</string>
    <string name="university">University</string>
    <string name="course">Course</string>
    <string name="teacher">Teacher</string>
    <string name="exercise">Exercise</string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>

    <!--Start Page-->
    <string name="hello_string">Hello</string>
    <string name="select">Select</string>
    <string name="find">Find</string>
    <string name="show_files">Show Files</string>
    <string name="not_selected">not selected</string>

    <!--Settings menu-->
    <string name="about">About</string>

    </resources>
